--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 # 本番用Dockerfile
 FROM python:3.11-slim
 WORKDIR /app
-COPY requirements.txt ./
+COPY ./ ./
 RUN pip install --no-cache-dir -r requirements.txt
-COPY ./app ./app
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+RUN pip install fastapi[standard]
+CMD ["fastapi", "run", "src/main.py", "--port", "8000"]
